--- a/html/elements.css
+++ b/html/elements.css
@@ -5,6 +5,7 @@ body {
     height:100%;
 }
 
+
 header {
     background-color: lightblue;
     padding: 10px;
@@ -12,37 +13,39 @@ header {
 aside {
     background-color: lightblue;
     float: left;
-    padding: 0 0 0 0;
-    width: 10%;
+    position: absolute;
     height: 100%;
 }
 
-#wrapper {
-    min-height:100%;
-    position:relative;
-}
 
+#oeffnungszeiten {
+    width: 200px;
+    position: relative;
+    left: 20px;
+    top: 5px;
+}
 article{
     float: left;
-    width: 60%;
+    width: 70%;
+    position: absolute;
+    top: 120px;
+    left: 200px;
 }
 
 nav {
     float: right;
-    width: 15%;
-    height: 100%;
     background-color: lightblue;
+    position: absolute;
+    right: 0;
+    height: 100%;
 }
 
 footer {
     background: lightblue;
-    clear: both;
     width: 100%;
     height:20px;
-    position:absolute;
+    position:fixed;
     bottom: 0;
-    left:0;
-
 }
 
 
